--- a/start.html
+++ b/start.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>My start file is not index.html file</h1>
+    <h2>My new destination</h2>
+    <img src="developer2.jpeg" alt="">
 </body>
 </html>
