--- a/start.html
+++ b/start.html
@@ -9,6 +9,11 @@
 <body>
     <h1>My start file is not index.html file</h1>
     <h2>My new destination</h2>
+    <div>
+        <h2>New Blog</h2>
+        <h5>This is going to be funny.</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur distinctio facilis inventore laudantium ducimus neque hic ullam laboriosam tempora odit molestiae, itaque sapiente fugit maiores nihil delectus aliquam adipisci ipsam ab consequuntur saepe eaque veritatis optio repudiandae! Mollitia nulla aperiam nihil accusamus libero impedit commodi dolor dolores veniam praesentium!</p>
+    </div>
     <img src="developer2.jpeg" alt="">
 </body>
 </html>
